--- a/wisata/prawira-village.html
+++ b/wisata/prawira-village.html
@@ -43,13 +43,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="../">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
+                    <a class="nav-link page-scroll" href="../#wisata">WISATA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#wisata">WISATA</a>
+                    <a class="nav-link page-scroll" href="../#budaya">BUDAYA</a>
                 </li>
             </ul>
             <span class="nav-item social-icons">
@@ -85,7 +85,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Prawira Village</h2>
-                        <p class="desc-text-justify">Dusun Prawira merupakan salah satu dusun adat di Desa Sokong yang masih dilestarikan. Dahulu, dusun ini menjadi tempat berkumpulnya para penggawa Kedatuan Sokong yang pernah ada di wilayah ini. Para penggawa adalah orang-orang yang bertugas sebagai penasihat dan pengawal raja. Hingga kini, jejak sejarah kedatuan masih bisa ditemukan dalam berbagai tradisi, bangunan, dan benda-benda peninggalan di dusun ini.</p>
+                        <p class="desc-text-justify">Dusun Prawira merupakan salah satu dusun adat di Desa Sokong yang masih dilestarikan. Dahulu, dusun ini menjadi tempat berkumpulnya para punggawa Kedatuan Sokong yang pernah ada di wilayah ini. Hingga kini, jejak sejarah kedatuan masih bisa ditemukan dalam berbagai tradisi, bangunan, dan benda-benda peninggalan di dusun ini.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
@@ -144,7 +144,7 @@
                                         <div class="accordion-body desc-text-justify">
                                             Masjid Setumpuk Kembang Dangar adalah masjid bersejarah yang terletak di Dusun Prawira. Keunikan masjid ini terletak pada namanya, yang tidak seperti kebanyakan masjid yang menggunakan nama bernuansa Arab. Nama Kembang Dangar diambil dari Kedatuan Sokong Kembang Dangar, yang pernah berkuasa di daerah ini. 
                                             <br>Masjid ini memiliki beberapa peninggalan bersejarah yang masih terjaga hingga kini, di antaranya:
-                                            <li>Tiang Sokok Tunggal/Tiang Sakat Tunggal, Tiang tunggal asli yang berada di tengah bangunan masjid, melambangkan kekuatan dan keteguhan masyarakat adat.</li>
+                                            <li>Tiang Saka Tunggal, Tiang tunggal asli yang berada di tengah bangunan masjid, melambangkan kekuatan dan keteguhan masyarakat adat.</li>
                                             <li>Mimbar dengan simbol naga, Melambangkan langit yang menaungi manusia di bumi. Dahulu, terdapat ukiran kura-kura/penyu di bawah mimbar yang melambangkan bumi sebagai tempat berpijak manusia.</li>
                                             <li>Jungkat (Tongkat Khotbah), Tongkat yang digunakan oleh khatib saat menyampaikan khotbah Jumat.</li>
                                         </div>
@@ -288,63 +288,23 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
-                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <h4>KKN PMD Desa Sokong 2024-2025</h4>
+                        <p class="white">© 2024 KKN PMD Desa Sokong - Universitas Mataram. Website ini dikembangkan sebagai upaya mendukung pengembangan Desa Wisata Sokong dengan menyediakan informasi wisata, budaya, dan produk lokal. Bersama kita wujudkan desa yang maju, berdaya, dan lestari. 🌿✨</p>
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Links</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <img src="../img/logo.png" alt="Logo KKN PMD Desa Sokong">
+                    </div>
+                </div> 
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Tools</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">businessgrowth.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">influencers.com</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="#your-link">optimizer.net</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Partners</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">unicorns.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">staffmanager.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">association.gov</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                        <img src="../img/unram.png" alt="Logo Universitas Mataram" height="100" width="100">
+                    </div>
+                </div>
+            </div> 
         <!-- </div> end of container -->
-
-    </div> <!-- end of footer -->  
-    <!-- end of footer -->
+    </div>
 
 
     <!-- Copyright -->
