--- a/index.html
+++ b/index.html
@@ -50,37 +50,10 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#projects">PROJECTS</a>
-                </li>
-    
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PRIVACY POLICY</span></a>
-                    </div>
-                </li> -->
-                <!-- end of dropdown menu -->
-
-                <!-- <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">CONTACT</a>
-                </li> -->
             </ul>
             <span class="nav-item social-icons">
-                <!-- <span class="fa-stack">
-                    <a href="#your-link">
-                        <span class="hexagon"></span>
-                        <i class="fab fa-facebook-f fa-stack-1x"></i>
-                    </a>
-                </span> -->
                 <span class="fa-stack">
                     <a href="https://www.instagram.com/kkn.sokong2024/">
-                        <!-- <span class="hexagon"></span> -->
                         <i class="fab fa-brands fa-instagram fa-stack-1x"></i>
                     </a>
                 </span>
@@ -97,8 +70,8 @@
                     <div class="col-lg-12">
                         <div class="text-container">
                             <h1>WISATA DESA SOKONG</h1>
-                            <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p>
-                            <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
+                            <!-- <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p> -->
+                            <!-- <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a> -->
                         </div>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -117,8 +90,7 @@
                         <!-- <div class="section-title">INTRO</div> -->
                         <h2>Desa Sokong</h2>
                         <p class="desc-text-justify">Desa Sokong adalah sebuah desa yang terletak di Kecamatan Tanjung, Kabupaten Lombok Utara. Sebelum mengalami pemekaran menjadi tiga desa, Desa Sokong terdiri dari 19 dusun. Desa ini memiliki potensi pariwisata dan kebudayaan yang menjadi daya tarik bagi wisatawan, baik domestik maupun mancanegara. Keindahan alam, kerajinan tangan khas, serta tradisi budaya yang masih lestari menjadikan Desa Sokong sebagai destinasi yang menarik untuk dikunjungi.</p>
-                        <!-- <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p> -->
-                    </div> <!-- end of text-container -->
+                    </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
@@ -146,11 +118,6 @@
                 <div class="accordion-container" id="accordionOne">
                     <h2>Pantai Karang Atas</h2>
                     <div class="item">
-                        <!-- <div id="headingOne">
-                            <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
-                                <span class="circle-numbering">1</span><span class="accordion-title">How Can Aria Help Your Business</span>
-                            </span>
-                        </div> -->
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
                             <div class="accordion-body desc-text-justify">
                                 Pantai Karang Atas atau juga dikenal Pantai Tanjung Atas merupakan pantai yang ada di Desa Sokong. Pantai ini menjadi tempat yang pantas untuk camping, memancing, dan menikmati keindahan sunset di sore hari. Pantai ini dikelola oleh Kelompok Sadar Wisata atau Pokdarwis Kembang Dangar.
@@ -236,62 +203,23 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
-                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <h4>KKN PMD Desa Sokong 2024-2025</h4>
+                        <p class="white">© 2024 KKN PMD Desa Sokong - Universitas Mataram. Website ini dikembangkan sebagai upaya mendukung pengembangan Desa Wisata Sokong dengan menyediakan informasi wisata, budaya, dan produk lokal. Bersama kita wujudkan desa yang maju, berdaya, dan lestari. 🌿✨</p>
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Links</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <img src="img/logo.png" alt="Logo KKN PMD Desa Sokong">
+                    </div>
+                </div> 
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Tools</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">businessgrowth.com</a>
-                            </li>
-                            <li>
-                               <a class="white" href="#your-link">influencers.com</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="#your-link">optimizer.net</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Partners</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">unicorns.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">staffmanager.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">association.gov</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                        <img src="img/unram.png" alt="Logo Universitas Mataram" height="100" width="100">
+                    </div>
+                </div>
+            </div> 
         <!-- </div> end of container -->
-    </div> <!-- end of footer -->  
-    <!-- end of footer -->
+    </div>
 
 
     <!-- Copyright -->
