--- a/wisata/pantai-karang-atas.html
+++ b/wisata/pantai-karang-atas.html
@@ -43,13 +43,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="../">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
+                    <a class="nav-link page-scroll" href="../#wisata">WISATA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#wisata">WISATA</a>
+                    <a class="nav-link page-scroll" href="../#budaya">BUDAYA</a>
                 </li>
             </ul>
             <span class="nav-item social-icons">
@@ -133,63 +133,23 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
-                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <h4>KKN PMD Desa Sokong 2024-2025</h4>
+                        <p class="white">© 2024 KKN PMD Desa Sokong - Universitas Mataram. Website ini dikembangkan sebagai upaya mendukung pengembangan Desa Wisata Sokong dengan menyediakan informasi wisata, budaya, dan produk lokal. Bersama kita wujudkan desa yang maju, berdaya, dan lestari. 🌿✨</p>
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Links</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                        <img src="../img/logo.png" alt="Logo KKN PMD Desa Sokong">
+                    </div>
+                </div> 
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Tools</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">businessgrowth.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">influencers.com</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="#your-link">optimizer.net</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Partners</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">unicorns.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">staffmanager.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="#your-link">association.gov</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                        <img src="../img/unram.png" alt="Logo Universitas Mataram" height="100" width="100">
+                    </div>
+                </div>
+            </div> 
         <!-- </div> end of container -->
-
-    </div> <!-- end of footer -->  
-    <!-- end of footer -->
+    </div>
 
 
     <!-- Copyright -->
